tests/miniJava/neg/001554_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new return int [ 0 ] ; } }
